--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="tk-margin">
                     <h2>100tk</h2>
                 </div>
-                <div class="tk-margin">
+                <div id="color-red" class="tk-margin">
                     <h2>200tk</h2>
                 </div>
                 <div class="tk-margin">
@@ -115,6 +115,13 @@
             </div>
         </div>
 
+    </section>
+
+    <section>
+        <div class="footer-design">
+            <h1 id="text">Be Humble</h1>
+            <footer id="text-jr">I'm gonna do it</footer>
+        </div>
     </section>
 
 </body>
