--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 <body>
     <section class="background">
         <div class="pad">
-            <h1 class="fonts">Let's Help Those Who Are More In Need</h1>
-            <h3 class="another-fonts">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset.
-                No duo populo animal noluisse, enim</h3>
+            <div id="top-margin">
+                <h1 class="fonts">Let's Help Those Who Are More In Need</h1>
+                <h3 class="another-fonts">Help the needy people. Make big changes and help the world!</h3>
+                <p class="another-fonts"> WE ARE NON-PROFIT ORGANIZATION</p>
+            </div>
             <a class="link-button" target="_blank" href="https://www.britannica.com/animal/hen">DONATE NOW</a>
         </div>
     </section>
@@ -76,28 +77,28 @@
                 <div id="color-one" class="border-plan">
                     <img src="icons/food.png" alt="">
                     <h3 class="text-size">Food for a family</h3>
-                    <p class="p-font">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-                        officia consequat
-                        duis
-                        enim velit mollit.</p>
+                    <p class="p-font">We try to provide foods for a family every week to help them. They
+                        are really
+                        in need
+                        of food everyday. Let's help them & the children to eat and live.</p>
                 </div>
 
                 <div id="color-two" class="border-plan">
                     <img src="icons/shelter.png" alt="">
                     <h3 class="text-size">Shelter for a family</h3>
-                    <p class="p-font">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-                        officia consequat
-                        duis
-                        enim velit mollit.</p>
+                    <p class="p-font">We try to provide foods for a family every week to help them. They
+                        are really
+                        in need
+                        of food everyday. Let's help them & the children to eat and live.</p>
                 </div>
 
                 <div id="color-three" class="border-plan">
                     <img src="icons/Frame-1.png" alt="">
                     <h3 class="text-size">Education for a child</h3>
-                    <p class="p-font">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-                        officia consequat
-                        duis
-                        enim velit mollit.</p>
+                    <p class="p-font">We try to provide foods for a family every week to help them. They
+                        are really
+                        in need
+                        of food everyday. Let's help them & the children to eat and live.</p>
                 </div>
             </div>
         </div>
@@ -110,7 +111,7 @@
                 deterruisset. No duo populo animal noluisse, enim
             </h3>
             <div class="button-in">
-                <input class="email-border" placeholder="Your email address" type="email">
+                <input class="email-border" placeholder="Email" type="email">
                 <button type="submit">Subscribe</button>
             </div>
         </div>
